--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -5,11 +5,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
@@ -17,14 +19,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1280.0" style="-fx-background-color: orange; -fx-border-color: BLACK;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1280.0" style="-fx-background-color: orange; -fx-border-color: BLACK; -fx-border-radius: 2; -fx-border-width: 2; -fx-background-radius: 2;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
    <children>
       <Button fx:id="startButton" alignment="CENTER" cacheShape="false" centerShape="false" focusTraversable="false" graphicTextGap="1.0" layoutX="12.0" layoutY="690.0" mnemonicParsing="false" onAction="#clickedStartButton" pickOnBounds="false" prefHeight="70.0" prefWidth="144.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="START" textAlignment="CENTER" textOverrun="CLIP">
          <font>
             <Font name="Arial Bold" size="12.0" />
          </font>
       </Button>
-      <Canvas fx:id="CanvasId" focusTraversable="true" height="566.0" layoutX="25.0" layoutY="107.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" onMouseReleased="#CanvasReleased" pickOnBounds="true" style="-fx-effect: dropshadow(one-pass-box, rgba(0,0,0,1), 5, 5, 0, 0);" width="1250.0" />
+      <Canvas fx:id="CanvasId" focusTraversable="true" height="559.0" layoutX="13.0" layoutY="114.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" onMouseReleased="#CanvasReleased" pickOnBounds="true" style="-fx-effect: dropshadow(one-pass-box, rgba(0,0,0,1), 5, 5, 0, 0);" width="1254.0" />
       <Button fx:id="stopButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="726.0" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="33.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="STOP">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -60,48 +62,65 @@
          </font></Text>
       <Button layoutX="1030.0" layoutY="722.0" mnemonicParsing="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
       <TextField layoutX="856.0" layoutY="722.0" style="-fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="755.0" layoutY="681.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="25.0" prefWidth="91.0" scaleShape="false" text="RANDOM">
+      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="761.0" layoutY="686.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="25.0" prefWidth="85.0" scaleShape="false" style="-fx-border-color: black;" text="RANDOM">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <ImageView fitHeight="83.0" fitWidth="507.0" layoutX="380.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="83.0" fitWidth="507.0" layoutX="371.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Game-of-Life.png" />
          </image>
       </ImageView>
       <ChoiceBox fx:id="choiceBox" layoutX="856.0" layoutY="685.0" prefWidth="150.0" style="-fx-border-radius: 3; -fx-border-color: Black;" />
-      <MenuBar blendMode="SRC_ATOP" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="27.0" prefWidth="1280.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;">
-         <menus>
-            <Menu text="File">
-               <items>
-                  <MenuItem mnemonicParsing="false" onAction="#openFile" text="Open">
-                     <accelerator>
-                        <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                     </accelerator>
-                  </MenuItem>
-                  <MenuItem onAction="#closeWindow" text="Exit">
-                     <accelerator>
-                        <KeyCodeCombination alt="UP" code="E" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                     </accelerator>
-                  </MenuItem>
-                  <MenuItem onAction="#saveBoard" text="Save">
-                     <accelerator>
-                        <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                     </accelerator>
-                  </MenuItem>
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="About" />
-               </items>
-            </Menu>
-         </menus>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </MenuBar>
+      <ToolBar prefHeight="16.0" prefWidth="1280.0" style="-fx-border-color: black; -fx-border-radius: 2; -fx-background-color: rgb(250,250,250); -fx-border-width: 2; -fx-background-radius: 2;">
+         <items>
+            <MenuBar blendMode="SRC_ATOP" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="101.0" scaleShape="false" style="-fx-background-color: rgb(250,250,250);">
+               <menus>
+                  <Menu text="File">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#openFile" text="Open">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                        <MenuItem onAction="#closeWindow" text="Exit">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="E" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                        <MenuItem onAction="#saveBoard" text="Save">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="Help">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="About" />
+                     </items>
+                  </Menu>
+               </menus>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <contextMenu>
+                  <ContextMenu>
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                    </items>
+                  </ContextMenu>
+               </contextMenu>
+            </MenuBar>
+            <Text fx:id="tekst" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="1128.9857788085938" />
+            <Button fx:id="exitButton" alignment="CENTER_RIGHT" cacheShape="false" centerShape="false" contentDisplay="RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#clickedExitButton" prefHeight="27.0" prefWidth="22.0" scaleShape="false" style="-fx-border-color: black; -fx-background-radius: 5; -fx-border-radius: 5;" text="X" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </items>
+      </ToolBar>
    </children>
    <opaqueInsets>
       <Insets />
