--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -73,7 +73,7 @@
          </image>
       </ImageView>
       <ChoiceBox fx:id="choiceBox" layoutX="856.0" layoutY="685.0" prefWidth="150.0" style="-fx-border-radius: 3; -fx-border-color: Black;" />
-      <ToolBar prefHeight="16.0" prefWidth="1280.0" style="-fx-border-color: black; -fx-border-radius: 2; -fx-background-color: rgb(250,250,250); -fx-border-width: 2; -fx-background-radius: 2;">
+      <ToolBar fx:id="Toolbar" onDragDetected="#clickedToolbar" prefHeight="16.0" prefWidth="1280.0" style="-fx-border-color: black; -fx-border-radius: 2; -fx-background-color: rgb(250,250,250); -fx-border-width: 2; -fx-background-radius: 2;">
          <items>
             <MenuBar blendMode="SRC_ATOP" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="101.0" scaleShape="false" style="-fx-background-color: rgb(250,250,250);">
                <menus>
@@ -121,6 +121,16 @@
             </Button>
          </items>
       </ToolBar>
+      <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="321.0" layoutY="54.0">
+         <image>
+            <Image url="@Glider.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="878.0" layoutY="54.0" rotate="90.0">
+         <image>
+            <Image url="@Glider.png" />
+         </image>
+      </ImageView>
    </children>
    <opaqueInsets>
       <Insets />
