--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -47,7 +47,7 @@
             <Insets />
          </opaqueInsets>
       </Slider>
-      <Text fontSmoothingType="LCD" layoutX="1073.0" layoutY="690.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="44.955078125">
+      <Text fontSmoothingType="LCD" layoutX="608.0" layoutY="692.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="MusicPLayer" textAlignment="RIGHT" wrappingWidth="97.99999237060547">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
@@ -73,7 +73,7 @@
          </image>
       </ImageView>
       <ChoiceBox fx:id="choiceBox" layoutX="856.0" layoutY="685.0" prefWidth="150.0" style="-fx-border-radius: 3; -fx-border-color: Black;" />
-      <ToolBar fx:id="Toolbar" onDragDetected="#clickedToolbar" prefHeight="16.0" prefWidth="1280.0" style="-fx-border-color: black; -fx-border-radius: 2; -fx-background-color: rgb(250,250,250); -fx-border-width: 2; -fx-background-radius: 2;">
+      <ToolBar fx:id="Toolbar" onDragDetected="#clickedToolbar" onMousePressed="#clickedToolbar" prefHeight="16.0" prefWidth="1280.0" style="-fx-border-color: black; -fx-border-radius: 2; -fx-background-color: rgb(250,250,250); -fx-border-width: 2; -fx-background-radius: 2;">
          <items>
             <MenuBar blendMode="SRC_ATOP" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="101.0" scaleShape="false" style="-fx-background-color: rgb(250,250,250);">
                <menus>
@@ -131,6 +131,15 @@
             <Image url="@Glider.png" />
          </image>
       </ImageView>
+      <ChoiceBox fx:id="musicChoiceBox" layoutX="595.0" layoutY="730.0" prefHeight="27.0" prefWidth="144.0" style="-fx-background-radius: 3; -fx-border-color: black; -fx-border-radius: 3;" />
+      <Button fx:id="musicStartButton" layoutX="595.0" layoutY="700.0" mnemonicParsing="false" onAction="#clickedMusicStartButton" prefHeight="27.0" prefWidth="45.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3;" text="Start" />
+      <Text fontSmoothingType="LCD" layoutX="1084.0" layoutY="691.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="44.955078125">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Text>
+      <Button fx:id="musicStopButton" layoutX="694.0" layoutY="700.0" mnemonicParsing="false" onAction="#clickedMusicStopButton" prefHeight="27.0" prefWidth="45.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3;" text="Stop" />
+      <Button fx:id="musicPauseButton" layoutX="639.0" layoutY="700.0" mnemonicParsing="false" onAction="#clickedMusicPauseButton" prefHeight="27.0" prefWidth="56.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3;" text="Pause" />
    </children>
    <opaqueInsets>
       <Insets />
