--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -27,12 +28,12 @@
          </font>
       </Button>
       <Canvas fx:id="CanvasId" focusTraversable="true" height="559.0" layoutX="13.0" layoutY="114.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" onMouseReleased="#CanvasReleased" pickOnBounds="true" style="-fx-effect: dropshadow(one-pass-box, rgba(0,0,0,1), 5, 5, 0, 0);" width="1254.0" />
-      <Button fx:id="stopButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="726.0" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="33.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="STOP">
+      <Button fx:id="stopButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="689.0" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="33.0" prefWidth="98.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="STOP">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="clearButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="690.0" mnemonicParsing="false" onAction="#clickedClearButton" prefHeight="33.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="CLEAR">
+      <Button fx:id="clearButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="727.0" mnemonicParsing="false" onAction="#clickedClearButton" prefHeight="33.0" prefWidth="98.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="CLEAR">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -56,19 +57,19 @@
             <Font name="System Bold" size="12.0" />
          </font></Text>
       <ColorPicker fx:id="colorPicker" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="919.0" layoutY="733.0" onAction="#colorPickerClicked" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" />
-      <Text fontSmoothingType="LCD" layoutX="690.0" layoutY="727.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pattern Link">
+      <Text fontSmoothingType="LCD" layoutX="654.0" layoutY="688.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pattern Link">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
-      <Button layoutX="783.0" layoutY="733.0" mnemonicParsing="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
-      <TextField layoutX="674.0" layoutY="733.0" prefHeight="27.0" prefWidth="109.0" style="-fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="489.0" layoutY="733.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="98.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="RANDOM" />
+      <Button layoutX="747.0" layoutY="690.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="120.0" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
+      <TextField layoutX="634.0" layoutY="692.0" prefHeight="27.0" prefWidth="109.0" style="-fx-border-color: black; -fx-border-radius: 3;" />
+      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="747.0" layoutY="730.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="56.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw" />
       <ImageView fitHeight="83.0" fitWidth="507.0" layoutX="371.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Game-of-Life.png" />
          </image>
       </ImageView>
-      <ChoiceBox fx:id="choiceBox" layoutX="404.0" layoutY="733.0" prefHeight="27.0" prefWidth="85.0" style="-fx-border-radius: 3; -fx-border-color: Black;" />
+      <ChoiceBox fx:id="choiceBox" layoutX="634.0" layoutY="730.0" prefHeight="27.0" prefWidth="109.0" style="-fx-border-radius: 3; -fx-border-color: Black;" />
       <ToolBar fx:id="Toolbar" onDragDetected="#clickedToolbar" onMousePressed="#clickedToolbar" prefHeight="16.0" prefWidth="1280.0" style="-fx-border-color: black; -fx-border-radius: 2; -fx-background-color: rgb(250,250,250); -fx-border-width: 2; -fx-background-radius: 2;">
          <items>
             <MenuBar blendMode="SRC_ATOP" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="113.0" scaleShape="false" style="-fx-background-color: rgb(250,250,250);">
@@ -129,13 +130,19 @@
       </ImageView>
       <ChoiceBox fx:id="musicChoiceBox" layoutX="1073.0" layoutY="733.0" prefHeight="27.0" prefWidth="175.0" style="-fx-background-radius: 3; -fx-border-color: black; -fx-border-radius: 3;" />
       <Button fx:id="musicStartButton" layoutX="1073.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicStartButton" prefHeight="17.0" prefWidth="56.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #3fa34e;" text="▶" />
-      <Text fontSmoothingType="LCD" layoutX="897.0" layoutY="703.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="44.955078125">
+      <Text fontSmoothingType="LCD" layoutX="891.0" layoutY="702.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="55.99998474121094">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Text>
       <Button fx:id="musicStopButton" layoutX="1192.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicStopButton" prefHeight="25.0" prefWidth="56.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #bf3333;" text="⏹" />
       <Button fx:id="musicPauseButton" layoutX="1133.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicPauseButton" prefHeight="27.0" prefWidth="56.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: lightgrey;" text="⏸" />
+      <ToggleButton layoutX="270.0" layoutY="702.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="109.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3;" text="Toggle DynamicBoard" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </ToggleButton>
+      <Button fx:id="randomButton1" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="807.0" layoutY="730.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="56.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Save" />
    </children>
    <opaqueInsets>
       <Insets />
