--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -61,9 +60,9 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
-      <Button layoutX="747.0" layoutY="690.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="120.0" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
-      <TextField layoutX="634.0" layoutY="692.0" prefHeight="27.0" prefWidth="109.0" style="-fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="747.0" layoutY="730.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="56.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw" />
+      <Button fx:id="patternLoad" layoutX="783.0" layoutY="733.0" mnemonicParsing="false" onAction="#patternLoad" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
+      <TextField fx:id="textBox" layoutX="674.0" layoutY="733.0" prefHeight="27.0" prefWidth="109.0" style="-fx-border-color: black; -fx-border-radius: 3;" />
+      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="489.0" layoutY="733.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="98.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="RANDOM" />
       <ImageView fitHeight="83.0" fitWidth="507.0" layoutX="371.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Game-of-Life.png" />
