--- a/src/_Game/Fxml/Frame.fxml
+++ b/src/_Game/Fxml/Frame.fxml
@@ -24,7 +24,7 @@
    <children>
       <ImageView fitHeight="748.0" fitWidth="1287.0" layoutX="-9.0" layoutY="32.0">
          <image>
-            <Image url="@Pictures/Background.png" />
+            <Image url="@../Pictures/Background.png" />
          </image>
       </ImageView>
       <Button fx:id="startButton" alignment="CENTER" cacheShape="false" centerShape="false" focusTraversable="false" graphicTextGap="1.0" layoutX="12.0" layoutY="690.0" mnemonicParsing="false" onAction="#clickedStartButton" pickOnBounds="false" prefHeight="70.0" prefWidth="144.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="START" textAlignment="CENTER" textOverrun="CLIP">
@@ -71,7 +71,7 @@
       <Button fx:id="drawPattern" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="769.0" layoutY="730.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw" />
       <ImageView fitHeight="83.0" fitWidth="507.0" layoutX="371.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Pictures/Game-of-Life.png" />
+            <Image url="@../Pictures/Game-of-Life.png" />
          </image>
       </ImageView>
       <ChoiceBox fx:id="patternChoiceBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="654.0" layoutY="730.0" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-radius: 3; -fx-border-color: Black;" />
@@ -100,7 +100,7 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="Help">
                      <items>
-                        <!--MenuItem fx:id="aboutButton" mnemonicParsing="false" onAction="#aboutButtonClicked" text="About" /-->
+                        <MenuItem fx:id="ruleButton" mnemonicParsing="false" onAction="#clickedRulesButton" text="Rules" />
                      </items>
                   </Menu>
                </menus>
@@ -125,16 +125,16 @@
       </ToolBar>
       <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="315.0" layoutY="50.0">
          <image>
-            <Image url="@Pictures/Glider.png" />
+            <Image url="@../Pictures/Glider.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="878.0" layoutY="50.0" rotate="90.0">
          <image>
-            <Image url="@Pictures/Glider.png" />
+            <Image url="@../Pictures/Glider.png" />
          </image>
       </ImageView>
       <ChoiceBox fx:id="musicChoiceBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1093.0" layoutY="730.0" prefHeight="25.0" prefWidth="162.0" scaleShape="false" style="-fx-background-radius: 3; -fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="musicStartButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1113.0" layoutY="697.0" mnemonicParsing="false"  prefHeight="25.0" prefWidth="37.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #3fa34e;" text="▶" />
+      <Button fx:id="musicStartButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1113.0" layoutY="697.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="37.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #3fa34e;" text="▶" />
       <Text fontSmoothingType="LCD" layoutX="878.0" layoutY="694.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="69.99998474121094">
          <font>
             <Font name="System Bold" size="14.0" />
